BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/Garanzie_finanziamenti__c.object-meta.xml
<CustomObject>
    <label>Garanzie finanziamenti</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Garanzie finanziamenti</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garanzie finanziamenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>