BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/Accordato__c.field-meta.xml
<CustomField>
    <fullName>Accordato__c</fullName>
    <label>Accordato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>