BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/Classe_di_rischio__c.field-meta.xml
<CustomField>
    <fullName>Classe_di_rischio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classe di rischio</label>
    <type>TextArea</type>
</CustomField>