BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/Finanziamento_a_cui_sono_legate_le_garan__c.field-meta.xml
<CustomField>
    <fullName>Finanziamento_a_cui_sono_legate_le_garan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanziamento a cui sono legate le garan</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Garanzie finanziamenti</relationshipLabel>
    <relationshipName>Garanzie_finanziamenti</relationshipName>
    <type>Lookup</type>
</CustomField>