BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/Importo__c.field-meta.xml
<CustomField>
    <fullName>Importo__c</fullName>
    <label>Importo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>