BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/NDG_a_cui_legato_il_finanziamento__c.field-meta.xml
<CustomField>
    <fullName>NDG_a_cui_legato_il_finanziamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDG a cui è legato il finanziamento</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Garanzie finanziamenti (NDG a cui è legato il finanziamento)</relationshipLabel>
    <relationshipName>Garanzie_finanziamenti1</relationshipName>
    <type>Lookup</type>
</CustomField>