BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/Ndg_anagrafe_garante__c.field-meta.xml
<CustomField>
    <fullName>Ndg_anagrafe_garante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ndg anagrafe garante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Garanzie finanziamenti</relationshipLabel>
    <relationshipName>Garanzie_finanziamenti</relationshipName>
    <type>Lookup</type>
</CustomField>