BPER/DEVF/force-app/main/default/objects/Garanzie_finanziamenti__c/fields/Tipo_garanzia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_garanzia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo garanzia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>